32/35 tests